# physicalai-textbooksecond

./: .gitignore  README.md  SUBMISSION_READY.md  docusaurus.config.ts  package-lock.json  package.json  render.yaml  sidebars.ts
backend/: .dockerignore  .env.example  .gitignore  .rebuild_trigger  BACKEND_READY.md  Dockerfile  README.md  TESTING.md  alembic.ini  check_qdrant.py  check_tables.py  create_tables_direct.py  drop_enums.py  fix_chunk_ids.py  full_reset.py  main.py  pyproject.toml  render.yaml  requirements.txt  reset_alembic.py  test_cohere_models.py  test_demo_questions.py  test_deps.py  test_final_demo.py  test_search.py
backend/.claude/: settings.local.json
backend/.specify/memory/: constitution.md
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/api/middleware/: error_handler.py  timing.py
backend/app/api/routes/: health.py  ingestion.py  question.py
backend/app/core/: config.py  dependencies.py  logging.py
backend/app/models/: database.py  requests.py  responses.py
backend/app/services/: chunker.py  embedder.py  generator.py  ingestion.py  metadata_store.py  question.py  retriever.py  vector_store.py
backend/app/utils/: markdown_parser.py  validators.py
backend/content/: sample_physical_ai.md
backend/history/prompts/001-rag-chatbot-pipeline/: 001-rag-chatbot-specification.spec.prompt.md  002-implementation-plan.plan.prompt.md  003-task-breakdown.tasks.prompt.md
backend/specs/001-rag-chatbot-pipeline/: spec.md
backend/specs/001-rag-chatbot-pipeline/checklists/: requirements.md
(+74 files in other folders)
